--- a/packages/RN-TSCodegen/package.json
+++ b/packages/RN-TSCodegen/package.json
@@ -21,7 +21,8 @@
     "@types/jest": "^24.0.17",
     "@types/node": "^12.6.9",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.18.0"
+    "tslint": "^5.18.0",
+    "tslint-microsoft-contrib": "^6.2.0"
   },
   "dependencies": {
     "jest": "^24.8.0",
