--- a/packages/RN-TSCodegen/package.json
+++ b/packages/RN-TSCodegen/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "build": "tslint --project tsconfig.json & tsc",
-    "test": "echo OK!"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,5 +28,9 @@
     "jest": "^24.8.0",
     "typescript": "^3.5.3",
     "tslint-shared": "^1.0.0"
+  },
+  "jest": {
+    "testRegex": "/lib/test/Test.*\\.js",
+    "verbose": true
   }
 }
