--- a/packages/ts-parsec/tsconfig.json
+++ b/packages/ts-parsec/tsconfig.json
@@ -1,14 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "lib": ["es6"],
     "module": "commonjs",
+    "moduleResolution": "node",
+    "target": "es5",
+
     "declaration": true,
     "sourceMap": true,
-    "noEmitOnError": true,
-    "moduleResolution": "node",
-    "noUnusedLocals": true,
-    "lib": ["es6"],
     "outDir": "./lib",
+    
+    "noEmitOnError": true,
+    "noUnusedLocals": true,
+    "strictNullChecks": true,
   },
   "exclude": ["node_modules", "src/test", "lib", "lib-amd"]
 }
