--- a/packages/RN-TSCodegen/package.json
+++ b/packages/RN-TSCodegen/package.json
@@ -20,14 +20,14 @@
   "devDependencies": {
     "@types/jest": "^24.0.17",
     "@types/node": "^12.6.9",
+    "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
     "tslint": "^5.18.0",
-    "tslint-microsoft-contrib": "^6.2.0"
+    "tslint-microsoft-contrib": "^6.2.0",
+    "tslint-shared": "^1.0.0"
   },
   "dependencies": {
-    "jest": "^24.8.0",
-    "typescript": "^3.5.3",
-    "tslint-shared": "^1.0.0"
+    "typescript": "^3.5.3"
   },
   "jest": {
     "testRegex": "/lib/test/Test.*\\.js",
