--- a/packages/ts-parsec/package.json
+++ b/packages/ts-parsec/package.json
@@ -2,7 +2,7 @@
   "name": "ts-parsec",
   "version": "1.0.0",
   "description": "TypeScript Parser Combinator",
-  "main": "./lib/index.js",
+  "main": "./lib/src/index.js",
   "scripts": {
     "build": "tslint --project tsconfig.json & tsc",
     "test": "jest"
