--- a/packages/RN-TSCodegen/package.json
+++ b/packages/RN-TSCodegen/package.json
@@ -2,7 +2,7 @@
   "name": "rn-tscodegen",
   "version": "1.0.0",
   "description": "TypeScript Code Generation for React Native Turbo Module",
-  "main": "./lib/index.js",
+  "main": "./lib/src/index.js",
   "scripts": {
     "build": "tslint --project tsconfig.json & tsc",
     "test": "jest"
