Move repo to use yarn workspaces and lerna

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,5 +6,9 @@ jobs:
     runs-on: windows-2019
     steps:
       - uses: actions/checkout@v1
+        with:
+          submodules: true
 
-      - run: init.bat
+      - run: yarn install --frozen-lockfile
+      - run: yarn build
+      - run: yarn test
