--- a/packages/tslint-shared/package.json
+++ b/packages/tslint-shared/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Shared tslint rules",
   "main": "tslint-export.json",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/microsoft/react-native-tscodegen.git"
   },
-  "author": "Zihan Chen",
-  "license": "MIT License",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/microsoft/react-native-tscodegen/issues"
   },
