--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ packages/*/lib/
 
 # package-lock.json
 package-lock.json
+
+# Unnecessary generated files
+packages/RN-TSCodegen-Test/src/inputs/e2e_components/output/
+packages/RN-TSCodegen-Test/src/inputs/e2e_modules/output/
