Duplicate CodegenSchema.ts in two packages. It contains only generated interface types, still DRY.

--- a/packages/RN-Codegen-Backend/package.json
+++ b/packages/RN-Codegen-Backend/package.json
@@ -2,7 +2,7 @@
   "name": "rn-codegen-backend",
   "version": "1.0.0",
   "description": "React Native Turbo Module Code Generation Backend",
-  "main": "./lib/RN-Codegen-Backend/src/index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "build": "flow-remove-types ../../react-native/packages/react-native-codegen/ -q -d lib/rncodegen/ & tslint --project tsconfig.json & tsc"
   },
