Fix test config

--- a/packages/RN-TSCodegen/package.json
+++ b/packages/RN-TSCodegen/package.json
@@ -4,8 +4,7 @@
   "description": "TypeScript Code Generation for React Native Turbo Module",
   "main": "./lib/index.js",
   "scripts": {
-    "build": "tslint --project tsconfig.json & tsc",
-    "test": "jest"
+    "build": "tslint --project tsconfig.json & tsc"
   },
   "repository": {
     "type": "git",
@@ -17,19 +16,12 @@
   },
   "homepage": "https://github.com/microsoft/react-native-tscodegen#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.17",
     "@types/node": "^12.6.9",
-    "jest": "^24.8.0",
-    "ts-jest": "^24.0.2",
     "tslint": "^5.18.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "tslint-shared": "^1.0.0"
   },
   "dependencies": {
     "typescript": "^3.5.3"
-  },
-  "jest": {
-    "testRegex": "/lib/test/Test.*Cases\\.js",
-    "verbose": true
   }
 }
