Begin to move packages\rn-tscodegen-test\src\lib to rn-tscodegen-types as descriptions

--- a/packages/RN-TSCodegen-Types/package.json
+++ b/packages/RN-TSCodegen-Types/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "react-native-tscodegen",
+  "name": "react-native-tscodegen-types",
   "version": "0.0.1",
   "description": "TypeScript Code Generation for React Native Turbo Module",
-  "main": "./lib/index.js",
-  "scripts": {
-    "build": "flow-remove-types ../../react-native/packages/react-native-codegen/ -q -d lib/rncodegen/ & tslint --project tsconfig.json & tsc"
-  },
+  "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/microsoft/react-native-tscodegen.git"
