--- a/packages/Playground/windows/Playground/Playground.vcxproj
+++ b/packages/Playground/windows/Playground/Playground.vcxproj
@@ -199,7 +199,7 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\node_modules\react-native-windows\ReactUWP\ReactUWP.vcxproj">
+    <ProjectReference Include="..\..\..\..\node_modules\react-native-windows\ReactUWP\ReactUWP.vcxproj">
       <Project>{2d5d43d9-cffc-4c40-b4cd-02efb4e2742b}</Project>
     </ProjectReference>
   </ItemGroup>
