--- a/packages/Playground/windows/Playground/Playground.vcxproj
+++ b/packages/Playground/windows/Playground/Playground.vcxproj
@@ -103,6 +103,9 @@
     <Import Project="PropertySheet.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>$(SolutionDir)..\cpp\;$(SolutionDir)..\..\..\node_modules\react-native\;$(SolutionDir)..\..\..\node_modules\react-native\ReactCommon\;$(SolutionDir)..\..\..\node_modules\react-native\ReactCommon\jsi\;$(SolutionDir)..\..\..\node_modules\react-native\ReactCommon\jsiexecutor\;$(SolutionDir)..\..\..\node_modules\react-native\ReactCommon\jscallinvoker;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -141,6 +144,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\cpp\react\modules\PlaygroundModule\NativeModules.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="App.h">
       <DependentUpon>App.xaml</DependentUpon>
@@ -172,6 +176,7 @@
     <Image Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\cpp\react\modules\PlaygroundModule\NativeModules.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
