--- a/packages/RN-TSCodegen/package.json
+++ b/packages/RN-TSCodegen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-tscodegen",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "TypeScript Code Generation for React Native Turbo Module",
   "main": "./lib/index.js",
   "bin": "./bin/cli",
@@ -19,13 +19,13 @@
   "devDependencies": {
     "@types/node": "^12.6.9",
     "flow-remove-types": "^2.106.2",
-    "jscodeshift": "0.6.4",
-    "nullthrows": "1.1.1",
     "tslint": "^5.18.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "tslint-shared": "^1.0.0"
   },
   "dependencies": {
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "jscodeshift": "0.6.4",
+    "nullthrows": "1.1.1"
   }
 }
