--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
 
       - run: git config --global user.email "53619745+rnbot@users.noreply.github.com"
       - run: git config --global user.name "React-Native-Windows Bot"
-      - run: git remote set-url origin https://rnbot:${{ secrets.GITHUB_TOKEN }}@github.com/microsoft/react-native-tscodegen.git
+      - run: git remote set-url origin https://rnbot:${{ secrets.githubToken }}@github.com/microsoft/react-native-tscodegen.git
       - run: yarn install --frozen-lockfile
       - run: yarn build
       - run: yarn test
