more publish fix

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+          token: ${{ secrets.githubToken }}
 
       - run: git config --global user.email "53619745+rnbot@users.noreply.github.com"
       - run: git config --global user.name "React-Native-Windows Bot"
