--- a/packages/RN-TSCodegen/tsconfig.json
+++ b/packages/RN-TSCodegen/tsconfig.json
@@ -1,17 +1,22 @@
 {
   "compilerOptions": {
-    "lib": ["es6"],
+    "lib": [
+      "es6"
+    ],
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "es5",
-
     "declaration": true,
     "sourceMap": true,
     "outDir": "./lib",
-    
     "noEmitOnError": true,
     "noUnusedLocals": true,
     "strictNullChecks": true,
   },
-  "exclude": ["node_modules", "src/test", "lib", "lib-amd"]
+  "exclude": [
+    "node_modules",
+    "src/test",
+    "lib",
+    "lib-amd"
+  ]
 }
