--- a/packages/minimum-flow-parser/package.json
+++ b/packages/minimum-flow-parser/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minimum-flow-parser",
+  "name": "@react-native-tscodegen/minimum-flow-parser",
   "version": "1.0.0",
   "private": true,
   "description": "Minimum Flow parser just enough to convert Flow to TypeScript for this project",
@@ -25,7 +25,7 @@
     "tslint": "^5.18.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^4.1.5",
-    "tslint-shared": "^1.0.0"
+    "@react-native-tscodegen/tslint-shared": "^1.0.0"
   },
   "dependencies": {
     "typescript-parsec": "^0.1.0"
