--- a/packages/RN-TSCodegen-Parser/package.json
+++ b/packages/RN-TSCodegen-Parser/package.json
@@ -19,15 +19,14 @@
   "homepage": "https://github.com/microsoft/react-native-tscodegen#readme",
   "devDependencies": {
     "@types/node": "^12.6.9",
-    "flow-remove-types": "^2.158.0",
     "tslint": "^5.18.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "@react-native-tscodegen/tslint-shared": "^1.0.0"
   },
   "dependencies": {
-    "typescript": "^4.7.4",
     "jscodeshift": "0.6.4",
     "nullthrows": "1.1.1",
-    "react-native-tscodegen": "0.70.0-rc.3"
+    "react-native-tscodegen": "0.70.0-rc.3",
+    "typescript": "^4.7.4"
   }
 }
