--- a/packages/RN-TSCodegen-Parser/package.json
+++ b/packages/RN-TSCodegen-Parser/package.json
@@ -24,6 +24,7 @@
     "@react-native-tscodegen/tslint-shared": "^1.0.0"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "jscodeshift": "0.6.4",
     "nullthrows": "1.1.1",
     "react-native-tscodegen": "0.70.0-rc.3",
