--- a/packages/RN-TSCodegen-Parser/package.json
+++ b/packages/RN-TSCodegen-Parser/package.json
@@ -29,5 +29,10 @@
     "nullthrows": "1.1.1",
     "react-native-tscodegen": "0.70.0-rc.3",
     "typescript": "^4.7.4"
+  },
+  "babel":{
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
   }
 }
