--- a/packages/RN-TSCodegen/package.json
+++ b/packages/RN-TSCodegen/package.json
@@ -27,5 +27,10 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "jscodeshift": "0.6.4",
     "nullthrows": "1.1.1"
+  },
+  "babel":{
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
   }
 }
