--- a/packages/RN-TSCodegen-Types/package.json
+++ b/packages/RN-TSCodegen-Types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-tscodegen-types",
-  "version": "0.70.0-rc.3",
+  "version": "0.70.0",
   "description": "TypeScript Code Generation for React Native Turbo Module",
   "main": "./index.js",
   "repository": {
