--- a/packages/RN-TSCodegen-Parser/package.json
+++ b/packages/RN-TSCodegen-Parser/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "jscodeshift": "0.6.4",
     "nullthrows": "1.1.1",
-    "react-native-tscodegen": "0.70.0-rc.3",
+    "react-native-tscodegen": "0.70.0",
     "typescript": "^4.7.4"
   }
 }
