--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   Publish:
     name: Publish
-    runs-on: ubuntu-18.04
+    runs-on: windows-2022
     steps:
       - uses: actions/checkout@v2
         with:
