Try enforcing a specific node version on the CI (#62)
* Use node 16

* use windows for CI

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -3,11 +3,15 @@ on: [push, pull_request]
 jobs:
   PR:
     name: Validation
-    runs-on: ubuntu-18.04
+    runs-on: windows-2022
     steps:
       - uses: actions/checkout@v1
         with:
           submodules: true
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
 
       - run: yarn install --frozen-lockfile
       - run: npx beachball check --branch origin/${{ github.base_ref }} --changehint "Run `yarn change` from root of repo to generate a change file."
