--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,12 +6,16 @@ on:
 jobs:
   Publish:
     name: Publish
-    runs-on: ubuntu-18.04
+    runs-on: windows-2022
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: true
           token: ${{ secrets.githubToken }}
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
 
       - run: git config --global user.email "53619745+rnbot@users.noreply.github.com"
       - run: git config --global user.name "React-Native-Windows Bot"
