--- a/packages/RN-TSCodegen/package.json
+++ b/packages/RN-TSCodegen/package.json
@@ -23,13 +23,14 @@
   "homepage": "https://github.com/microsoft/react-native-tscodegen#readme",
   "devDependencies": {
     "@types/node": "^12.6.9",
-    "flow-remove-types": "^2.158.0",
+    "flow-remove-types": "^2.198.2",
     "tslint": "^5.18.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "rimraf": "3.0.2",
     "@react-native-ts-codegen/tslint-shared": "^1.0.0",
     "@babel/cli": "7.18.10",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
@@ -44,14 +45,15 @@
   },
   "babel": {
     "plugins": [
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-export-default-from",
+      "@babel/plugin-proposal-nullish-coalescing-operator",
       "@babel/plugin-proposal-object-rest-spread",
+      "@babel/plugin-proposal-optional-chaining",
       "@babel/plugin-transform-async-to-generator",
       "@babel/plugin-transform-destructuring",
       "@babel/plugin-transform-flow-strip-types",
-      "@babel/plugin-syntax-dynamic-import",
-      "@babel/plugin-proposal-class-properties",
-      "@babel/plugin-proposal-nullish-coalescing-operator",
-      "@babel/plugin-proposal-optional-chaining"
+      "@babel/plugin-syntax-dynamic-import"
     ]
   }
 }
